--- a/workout/templates/list.html
+++ b/workout/templates/list.html
@@ -1,8 +1,34 @@
 {% extends 'index.html' %}
 {% block content %}
-    <ul>
-        {% for w in workouts %}
-            <li>{{w.name}}</li>
-        {%endfor%}
-    </ul>
+    <div> 
+        <table border='1' style='width:80%; margin:auto; padding:5px;'>
+            <thead>
+                <tr>
+                    <td>Date</td>
+                    <td>Name</td>
+                    <td>Calories</td>
+                    <td>Heartrate</td>
+                    <td>Duration</td>
+                    <td>Zones</td>
+                    <td>Distance</td>
+                </tr>
+            </thead>
+            <tbody>
+                {% for w in workouts %}
+                <tr>
+                    <td>{{w.date}}</td>
+                    <td>{{w.name}}</td>
+                    <td>{{w.calories}}</td>
+                    <td>{{w.heartrate}}</td>
+                    <td>{{w.hours}}:{{w.minutes}}:{{w.seconds}}</td>
+                    <td>{{w.peak}}|{{w.cardio}}|{{w.fatburn}}</td>
+                    <td>{{w.distance}}</td>
+                </tr>
+                {%endfor%}
+            </tbody>
+        </table>
+    </div>
+
+
+
 {%endblock%}
