Add def 'delete' and 'edit' to views.py Update 'index' name to 'list' in views.py Add form for each workout in list.html Add workout.js and update for ajax calls Update urls.py for 'delete' and 'edit' calls Todo:     * Debug workout_scraper.py to handle a 'run' workout     * Add buttons to delete and update forms in list.html     * Debug ajax calls in workout.js     * Remove git repo cache to allow .gitignore to work

--- a/workout/templates/list.html
+++ b/workout/templates/list.html
@@ -1,6 +1,8 @@
 {% extends 'index.html' %}
 {% block content %}
-    <div> 
+{% csrf_token %} 
+    
+<div> 
         <table border='1' style='width:80%; margin:auto; padding:5px;'>
             <thead>
                 <tr>
@@ -15,18 +17,31 @@
             </thead>
             <tbody>
                 {% for w in workouts %}
-                <tr>
-                    <td>{{w.date}}</td>
-                    <td>{{w.name}}</td>
-                    <td>{{w.calories}}</td>
-                    <td>{{w.heartrate}}</td>
-                    <td>{{w.hours}}:{{w.minutes}}:{{w.seconds}}</td>
-                    <td>{{w.peak}}|{{w.cardio}}|{{w.fatburn}}</td>
-                    <td>{{w.distance}}</td>
-                </tr>
-                {%endfor%}
+                    <tr>
+                        <td>{{ w.date }}</td>
+                        <td>{{w.name}}</td>
+                        <td>{{w.calories}}</td>
+                        <td>{{w.heartrate}}</td>
+                        <td>{{w.hours}}:{{w.minutes}}:{{w.seconds}}</td>
+                        <td>{{w.peak}}|{{w.cardio}}|{{w.fatburn}}</td>
+                        <td>{{w.distance}}</td>
+                    </tr>
+                {% for form in formset %}
+                    <tr>            
+                        <td>Date: {{form.date}}</td>
+                        <td>Name: {{form.name}}</td>
+                        <td>Calories: {{form.calories}}</td>
+                        <td>Heartrate: {{form.heartrate}}</td>
+                        <td>Duration: {{form.hours}}:{{form.minutes}}:{{form.seconds}}</td>
+                        <td>Zones: {{form.peak}}|{{form.cardio}}|{{form.fatburn}}</td>
+                        <td>Distance: {{form.distance}}</td>
+                    </tr>
+                {% endfor %}
+                {% endfor %}
+                
             </tbody>
         </table>
+        <!-- This is a test -->        
     </div>
 
 
