--- a/workout/templates/index.html
+++ b/workout/templates/index.html
@@ -1,17 +1,19 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  <title>Workouts</title>
-  <meta name="description" content="The HTML5 Barebones">
-  <meta name="author" content="slwilson">
-  <!--<script src="/js/workout.js"></script>
-  <link rel="stylesheet" href="css/styles.css?v=1.0">-->
-
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+    <title>Workouts</title>
+    <meta name="description" content="The HTML5 Barebones">
+    <meta name="author" content="slwilson">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="{% static 'workout.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'workout.css' %}"> 
+    <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 </head>
 
 <body>
