--- a/workout/templates/index.html
+++ b/workout/templates/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <h1>This is the Index Page.</h1>
-    {%block content%}
-    {%endblock%}
+    {% include 'sidebar.html' %}
+    {% block content %}{% endblock %}
 </body>
 </html>
