--- a/workout/templates/list.html
+++ b/workout/templates/list.html
@@ -1,10 +1,9 @@
 {% extends 'index.html' %}
 {% block content %}
-
-<div>   
-    <table style='width:80%; margin:auto;'>
-        <thead>
-            <tr>
+<div id='content'>   
+    <table id='workout-table' style='width:60%; margin:auto;'>
+        <thead id='workout-table-header'>
+            <tr id='workout-table-header-row'>
                 <td>Date</td>
                 <td>Name</td>
                 <td>Calories</td>
@@ -14,12 +13,12 @@
                 <td>Distance</td>
             </tr>
         </thead>
-        <tbody>
-            <form method='POST' action='edit/'>
+        <tbody id='workout-table-body'>
+            <form method='POST' action='/update/'>
             {{formset.management_form}}
             {%csrf_token%}
             {%for form in formset%}
-            <tr>
+            <tr class='workout-row'>
                 <td>{{form.date.value}}</td>
                 <td>{{form.name.value}}</td>
                 <td>{{form.calories.value}}</td>
@@ -27,12 +26,10 @@
                 <td>{{form.peak.value}}|{{form.cardio.value}}|{{form.fatburn.value}}</td>
                 <td>{{form.hours.value}}:{{form.minutes.value}}:{{form.seconds.value}}</td>
                 <td>{{form.distance.value}}</td>
-                <td>
-                    <div class='workout-edit'>edit</div>
-                    <div class='workout-delete' id='{{form.id.value}}'>delete</div>
-                </td>
+                <td><div class='workout-edit'>edit</div></td>
+                <td><div class='workout-delete' id='{{form.id.value}}'>delete</div></td>
             </tr>
-            <tr style='display:none;'>
+            <tr class='workout-form-row' style='display:none;'>
                 {{form.id}}
                 <td>{{form.date}}</td>
                 <td>{{form.name}}</td>
@@ -41,8 +38,8 @@
                 <td>{{form.peak}}|{{form.cardio}}|{{form.fatburn}}</td>
                 <td>{{form.hours}}:{{form.minutes}}:{{form.seconds}}</td>
                 <td>{{form.distance}}</td>
-                <td>
-                    <input type='submit' value='edit'>
+                <td><input class='submit-edit 'type='submit' value='submit'></td>
+                <td style='vertical-align:top; padding-top:0;'>
                     <div class='cancel-edit'>X</div>
                 </td>
            </tr>
@@ -51,4 +48,4 @@
         </tbody>
     </table>
 </div>
-{%endblock%}
+{% endblock %}
