Update views.py to:     * Accept url month value to sort     * Return workouts associated by month or all     * Edit update and delete defs to redirect to prev month Update urls.py to accept string for month name Update sidebar.html to:     * Add link for 'all' workouts     * Use links for li items     * Add classes and ids for css Todo:     * Sort by workout name     * Show charts for all, month, and indv workouts     * Edit sidebar.html for minor styling

--- a/workout/templates/list.html
+++ b/workout/templates/list.html
@@ -14,7 +14,7 @@
             </tr>
         </thead>
         <tbody id='workout-table-body'>
-            <form method='POST' action='/update/'>
+            <form method='POST' action='/update/{{month}}'>
             {{formset.management_form}}
             {%csrf_token%}
             {%for form in formset%}
