--- a/workout/templates/list.html
+++ b/workout/templates/list.html
@@ -1,7 +1,8 @@
 {% extends 'index.html' %}
 {% block content %}
-<div id='content'>   
-    <table id='workout-table' style='width:60%; margin:auto;'>
+<div id='content'>
+<div id='workout-table-border'> 
+    <table id='workout-table' style='width:100%'>
         <thead id='workout-table-header'>
             <tr id='workout-table-header-row'>
                 <td>Date</td>
@@ -47,5 +48,6 @@
             </form>
         </tbody>
     </table>
+</div>
 </div>
 {% endblock %}
