--- a/workout/templates/index.html
+++ b/workout/templates/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <h1>This is the Index Page.</h1>
+    {% include 'header.html' %}
     {% include 'sidebar.html' %}
     {% block content %}{% endblock %}
 </body>
