--- a/workout/static/workout.css
+++ b/workout/static/workout.css
@@ -80,7 +80,7 @@ body {
 #content {
 }
 
-#workout-table-border {
+#workout-table-border, #workout-chart {
     width:60%;
     margin:auto;
     border:1px solid #d8d8d8;
