--- a/workout/templates/index.html
+++ b/workout/templates/index.html
@@ -9,7 +9,8 @@
     <meta name="description" content="The HTML5 Barebones">
     <meta name="author" content="slwilson">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="{% static 'workout.js' %}"></script>
+    <script src="{% static 'Chart.js' %}"></script>
+    <script src="{% static 'workout.js' %}"></script> 
     <link rel="stylesheet" href="{% static 'workout.css' %}"> 
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -19,6 +20,7 @@
 <body>
     {% include 'header.html' %}
     {% include 'sidebar.html' %}
+    {% include 'chart.html' %}
     {% block content %}{% endblock %}
 </body>
 </html>
