Major UI concept change Update urls.py to accept year, month, workout format Add year.html Update views.py to:     * Update defs for year, month, workout views     * Add def to return dict of number of workouts per year Todo:     * Update views.py month and workout defs     * Add month and workout htmls     * Update workout.js to adjust icon size by workout number     * Update workout.js and year.html for animations and links

--- a/workout/static/workout.css
+++ b/workout/static/workout.css
@@ -64,6 +64,32 @@ body {
     text-align:center;
 }
 
+#container {
+    overflow: hidden;
+    width: 60%;
+    margin: auto;
+}
+
+
+.year-circle {
+    float: left;
+    margin: 2%;
+    max-width: 600px;
+    min-width: 100px;
+    width: 300px;
+    height: 300px;
+    border: 1px solid black;
+    border-radius: 50%;
+    background: white;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 300px;
+}
+
+
+
+
+
 #sidebar {
     float:left;
     margin-left:0.5%;
