--- a/workout/templates/index.html
+++ b/workout/templates/index.html
@@ -19,8 +19,8 @@
 
 <body>
     {% include 'header.html' %}
-    {% include 'sidebar.html' %}
-    {% include 'chart.html' %}
-    {% block content %}{% endblock %}
+    <div id='content'>
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
