Update header.html to show year and logo Update workout.js to adjust date circle size for numbr of workouts Add month.html Update year.html to make circles into links Update views.py month def to get workouts and months Todo:     * Add workout.html     * Update views.py for workout view     * Update workout.js for animations

--- a/workout/templates/header.html
+++ b/workout/templates/header.html
@@ -1,3 +1,4 @@
 <div id='header'>
-    <div id='logo'>Workout Site</div>
+    <div id='logo'>Workouts</div>
+    <div id='header-year'>{{year}}</div>
 </div>
