--- a/workout/static/workout.css
+++ b/workout/static/workout.css
@@ -56,22 +56,27 @@ body {
     font-family: Arial, Helvetica, sans-serif;   
     background:#ebebeb;
 }
-
 #header {
-    padding:3%;
-    margin:auto;
-    border-bottom:2px solid #d8d8d8;
-    text-align:center;
+    overflow:hidden;
+}
+#content {
+    padding: 5% 0;
+}
+
+#header-year, #logo {
+    margin: 0 1%;
+    float: left;
+    font-size: 10em;
 }
 
 #container {
-    overflow: hidden;
-    width: 60%;
-    margin: auto;
+    width: 30%;
+    margin:auto;
+    padding: 5% 0;
 }
 
 
-.year-circle {
+.date-circle {
     float: left;
     margin: 2%;
     max-width: 600px;
