--- a/workout/templates/header.html
+++ b/workout/templates/header.html
@@ -1,4 +1,7 @@
 <div id='header'>
     <div id='logo'>Workouts</div>
     <div id='header-year'>{{year}}</div>
+    {% if year %}
+    <div id='header-back'></div>
+    {% endif %}
 </div>
