--- a/workout/static/workout.css
+++ b/workout/static/workout.css
@@ -58,7 +58,7 @@ body {
 }
 #header {
     overflow:hidden;
-    width: 200%;
+    width: 250%;
 }
 
 #content {
@@ -67,7 +67,7 @@ body {
 #header-year, #header-month,
 #logo {
     float: left;
-    font-size: 10em;
+    font-size: 8em;
     vertical-align:middle;
 }
 
@@ -80,6 +80,7 @@ body {
     height:80px;
     border: 1px solid black;
     border-radius: 50%;
+    z-index: 5;
     
 }
 
@@ -89,8 +90,8 @@ body {
 
 #container{
     position: absolute;
-    padding-top:30%;
-    margin:auto;
+    padding-top: 30%;
+    margin: auto;
     top:0;
     bottom:0;
     left:0;
@@ -98,6 +99,7 @@ body {
     width:40%;
     height:100%;
     overflow:hidden;
+    z-index: -5;
 }
 
 
