--- a/workout/templates/year.html
+++ b/workout/templates/year.html
@@ -3,7 +3,10 @@
 {% block content %}
     <div id='container'>
         {% for y in years %}
-        <a href='{{y.year}}' class='date-circle' workouts='{{y.workouts}}'>{{y.year}}</a>
+        <div href='{{y.year}}' class='date-circle' workouts='{{y.workouts}}'>
+            <div class='date-circle-date'>{{y.year}}</div>
+            <div class='date-circle-workouts'>{{y.workouts}}<br>workouts</div>
+        </div>
         {% endfor %}
     </div>
     
